# wyf-agent

./: .gitignore  AGENTS.md  ARCHITECTURE.md  claude-progress.md  clean-state-checklist.md  evaluator-rubric.md  feature_list.json  frontend.py  pyproject.toml  session-handoff.md  test_document_ingestion.py
config/: .env.example  config.yaml  mcp_servers.yaml  mcp_servers.yaml.template
data/test_docs/: docker_intro.md  fastapi_intro.txt  langgraph_intro.txt  machine_learning.md  python_intro.md  rag_intro.md  vector_db_comparison.md
desktop/: README.md  package-lock.json  package.json
desktop/src/: main.js
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yaml
docs/: DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: 2026-06-15-multimodal-design.md  index.md
docs/exec-plans/: index.md  tech-debt-tracker.md
docs/product-specs/: index.md
evals/: ab_test.py  eval_results.json  quick_test.py  regression_test.py  run_eval.py  run_tests.py  test_dataset.json
mcp_servers/: api_server.py  db_server.py  search_server.py  test_server.py
prompts/: system.md
scripts/: benchmark.sh  check-architecture.sh  cleanup-scanner.sh  init.sh
src/: __init__.py  api.py
tests/: test_basic.py  test_knowledge_tool.py  test_mcp_servers.py  test_permissions.py  test_rag_bm25.py  test_rag_embeddings.py  test_rag_graph.py  test_rag_hybrid.py  test_rag_kg.py  test_rag_loader.py  test_rag_retriever.py  test_rag_splitter.py  test_rag_vectorstore.py  test_tool_cache.py  test_tool_call_optimization.py
(+54 files in other folders)
